--- a/style.css
+++ b/style.css
@@ -8,14 +8,14 @@ body {
 }
 
 h1 {
-  margin-top: 80px;
+  margin-top: 70px;
   text-align: center;
   font-family: 'Slackey', cursive;
   font-size: 40px;
   transform-origin: bottom;
   animation-name: bounce;
   animation-duration: 1.8s;
-  animation-iteration-count: 1;
+  animation-iteration-count: 3;
   animation-timing-function: ease;
 }
 
@@ -44,9 +44,9 @@ h1 {
 }
 
 form {
-  margin-top: 40px;
+  margin-top: 30px;
   text-align: center;
-  font-size: 18px;
+  font-size: 15px;
 }
 
 .size {
@@ -90,6 +90,28 @@ form {
   background-color: white;
 }
 
+.color {
+  margin-top: 15px;
+}
+
+select#color-mode {
+  padding: 2px;
+  border-color: transparent;
+  border-radius: 2%;
+  background-color: rgb(85, 80, 80);
+  color: white;
+  font-family: 'Sono', sans-serif;
+}
+
+label.colorPicker {
+  margin-left: 15px;
+}
+
+input[type='color'] {
+  width: 25px;
+  height: 25px;
+}
+
 .container {
   margin: auto;
   margin-top: 10px;
@@ -99,23 +121,19 @@ form {
   height: 400px;
   display: flex;
   flex-direction: column;
-  align-items: center;
   justify-content: space-evenly;
-  gap: 2px;
-  row-gap: 2px;
+  row-gap: 2px; /* or gap*/
 }
 
-/* add on js file instead
+/* grid size */
 .row {
   flex: 1;
   width: 100%;
-  height: 6.25%;
+  height: 6.25%; /* 100 / 16 */
   display: flex;
   justify-content: space-evenly;
   gap: 2px;
-  row-gap: 2px;
 }
-*/
 
 .box {
   flex: 1;
@@ -126,14 +144,14 @@ form {
 .message {
   font-size: 18px;
   text-align: center;
-  /*animation*/
+  /* animation */
   margin: 15px auto;
   width: 123px;
   overflow: hidden;
   white-space: nowrap;
   border-right: 2px solid black;
-  animation: typewriter 4s steps(11) 1s 1 normal both,
-    blinkTextCursor 500ms steps(11) 14 normal;
+  animation: typewriter 4s steps(11) 5s 1 normal both,
+    blinkTextCursor 500ms steps(11) 20 normal;
 }
 
 @keyframes typewriter {
