--- a/style.css
+++ b/style.css
@@ -8,7 +8,8 @@ body {
 }
 
 h1 {
-  margin-top: 70px;
+  padding: 0;
+  margin-top: 50px;
   text-align: center;
   font-family: 'Slackey', cursive;
   font-size: 40px;
@@ -44,9 +45,9 @@ h1 {
 }
 
 form {
-  margin-top: 30px;
+  margin-top: 10px;
   text-align: center;
-  font-size: 15px;
+  font-size: 14px;
 }
 
 .size {
@@ -58,7 +59,7 @@ form {
 .submit {
   padding: 1px;
   font-family: 'Sono', sans-serif;
-  font-size: 15px;
+  font-size: 14px;
 }
 
 .submit:hover {
@@ -74,7 +75,7 @@ form {
   margin-left: 15px;
   padding: 5px;
   font-family: 'Sono', sans-serif;
-  font-size: 15px;
+  font-size: 14px;
   background-color: rgb(12, 203, 34);
   border: 1.5px solid black;
   border-radius: 3px;
@@ -110,6 +111,10 @@ label.colorPicker {
 input[type='color'] {
   width: 25px;
   height: 25px;
+}
+
+.draw-method {
+  margin-top: 15px;
 }
 
 .container {
